# PureshadeOS

./: .gitattributes  .gitignore  CLAUDE.md  CNAME  Cargo.toml  LICENSE  Makefile  README.md  TEST.md  TODO.md  flake.nix  index.html  limine.conf  run-limine.sh  run.sh  spec.html  userspace.ld  x86_64-oros.json
.cargo/: config.toml
abi/lythos-abi/: Cargo.toml
abi/lythos-abi/src/: cap.rs  errno.rs  exit.rs  ipc.rs  lib.rs  structs.rs  syscall.rs
abi/lythos-syscall/: Cargo.toml
abi/lythos-syscall/src/: lib.rs  x86_64.rs
cask-std/: Cargo.toml
cask-std/src/: allocator.rs  cap.rs  error.rs  io.rs  ipc.rs  lib.rs  prelude.rs  sync.rs  syscall.rs  task.rs  time.rs
docs/bringup/: boot-image.md  uefi-baremetal.md
docs/design/: README.md  RaptorOS_Design_Document.docx  architecture.md  boot.md  design_document.md  drivers.md  elf.md  lythd.md  memory.md  rfs.md
docs/plans/: followup-code-tasks.md  kernel_build_plan.md  mount-syscall-shade-store.md  per-task-mount-namespace.md  tasks.md  website.md
docs/rfs-v2/: 01-overview.md  02-on-disk-layout.md  03-superblock.md  04-cow-and-commit.md  05-space-management.md  06-inodes.md  07-directories.md  08-encryption.md  09-consistency.md  10-format-and-compat.md
docs/rpkg/: 01-overview.md  02-store.md  03-recipe-format.md  04-sources.md  05-dependencies.md  06-build.md  07-cli.md  08-security.md
docs/shade/: 01-overview.md  02-grammar.md  03-semantics.md  04-values.md  05-derivation.md  06-imports.md  07-stdlib.md  08-interop.md  build-executor.md  build-sandbox.md  generations-profiles.md  on-target-audit.md  store-db-gc.md
docs/shade-pkg/: 01-overview.md  02-store.md  03-recipe-format.md  04-sources.md  05-dependencies.md  06-build.md  07-cli.md  08-security.md  09-bootstrap.md  10-system-prism.md
docs/spec/: capabilities.md  fhs.md  ipc.md  syscalls.md
fs/rfs2/: Cargo.toml
fs/rfs2/src/: device.rs  dirent.rs  fs.rs  inode.rs  layout.rs  lib.rs  space.rs  superblock.rs  transform.rs
fs/rfs2/src/crypto/: imp.rs  mod.rs  tests.rs
fs/rfs2/tests/: crash.rs  encrypted.rs  fs_basic.rs  imap_growth.rs  layout.rs  links.rs  policy.rs  rename.rs  space.rs  transform_seam.rs
fs/rfs2/tests/common/: mod.rs
fs/vfs-core/: Cargo.toml
fs/vfs-core/src/: backend.rs  lib.rs  mount.rs  namespace.rs  realize.rs  testutil.rs
fs/vfs-core/src/mount/: tests.rs
fs/vfs-core/src/namespace/: tests.rs
fs/vfs-core/src/realize/: tests.rs
kernel/: CLAUDE.md  Cargo.toml  build.rs
kernel/.cargo/: config.toml
kernel/boot/linker/: x86_64.ld
kernel/src/: acpi.rs  apic.rs  cap.rs  console.rs  device.rs  elf.rs  exceptions.rs  font8x16.rs  framebuffer.rs  gdt.rs  heap.rs  idt.rs  ioapic.rs  ipc.rs  kaslr.rs  kdf.rs  keyboard.rs  log.rs  main.rs  pci.rs  pmm.rs  rfs.rs  serial.rs  smp.rs  syscall.rs  task.rs  time.rs  tss.rs  vfs.rs  virtio_blk.rs  virtio_net.rs  vmm.rs
kernel/src/arch/x86_64/: ap_trampoline.s  boot.s  isr_stubs.s
kernel/src/net/: arp.rs  eth.rs  icmp.rs  ip.rs  mod.rs  udp.rs
lythd/: Cargo.toml  build.rs
lythd/src/: main.rs
lythdist/: Cargo.toml
lythdist/src/: main.rs
lythmsg/: Cargo.toml
lythmsg/src/: main.rs
lythos-libstd/: Cargo.toml
lythos-libstd/src/: collections.rs  env.rs  fmt.rs  fs.rs  lib.rs  path.rs  process.rs  thread.rs  time.rs
lythos-libstd/src/io/: buffered.rs  error.rs  stdio.rs
lythos-libstd/src/os/: lythos.rs  mod.rs
lythos-std/: Cargo.toml
lythos-std/src/: allocator.rs  boot.rs  cap.rs  io.rs  ipc.rs  lib.rs  orox.rs  prelude.rs  sync.rs  syscall.rs  task.rs  time.rs
lythos-toolchain/lythos-libc/: Cargo.toml
lythos-toolchain/lythos-libc/src/: lib.rs
lythos-toolchain/scripts/: build-stage0.sh
lythos-toolchain/sysroot-builder/: Cargo.toml
lythos-toolchain/target-specs/: x86_64-lythos.json
orox-pack/.cargo/: config.toml
pkg/rpkg/: Cargo.toml
pkg/shade/: Cargo.toml
pkg/shade-build/: Cargo.toml
pkg/shade-build/src/: executor.rs  lib.rs  sandbox.rs  tests.rs
pkg/shade-cdf/: Cargo.toml
pkg/shade-cdf/src/: lib.rs
pkg/shade-gen/: Cargo.toml
pkg/shade-gen/src/: lib.rs  prism.rs  tests.rs
pkg/shade-store/: Cargo.toml
pkg/shade-store-db/: Cargo.toml
pkg/shade-store-db/src/: lib.rs  tests.rs
pkg/shade-store/src/: backend.rs  host.rs  lib.rs  memfs.rs  oros.rs
pkg/shade/src/: main.rs
pkg/shadec/: Cargo.toml
pkg/shadec/lib/: attrsets.shade  default.shade  derivations.shade  lists.shade  strings.shade  trivial.shade
pkg/shadec/src/: ast.rs  builtins.rs  drv.rs  error.rs  eval.rs  io.rs  lexer.rs  lib.rs  parser.rs  print.rs  value.rs
pkg/shadec/tests/: cdf_gate.rs  eval_golden.rs  lib_golden.rs  parser_golden.rs  purity.rs
rootfs/etc/: group  hostname  motd  passwd  shadow
scripts/: build-disk.sh  build-iso.sh  grub-disk.cfg  grub.cfg
tools/lythos-toolchain/: config.toml.template
tools/mkrfs/: Cargo.toml  Makefile  mkrfs
tools/mkrfs2/: Cargo.toml  Makefile  librfs2.rlib  mkrfs2
tools/mkrfs2/src/: main.rs
tools/orox-pack/: Cargo.toml
userspace/: CLAUDE.md
userspace/.cargo/: config.toml
userspace/daemons/netd/: Cargo.toml
userspace/daemons/netd/src/: main.rs  nic.rs
userspace/daemons/netd/src/net/: arp.rs  eth.rs  icmp.rs  ipv4.rs  mod.rs  wire.rs
userspace/lib/lythos-driver/: Cargo.toml
userspace/lib/lythos-driver/src/: dma.rs  lib.rs  mmio.rs  virtio_pci.rs  virtq.rs
userspace/lib/lythos-libstd/: Cargo.toml
userspace/lib/lythos-libstd/src/: env.rs  error.rs  ffi.rs  lib.rs  net.rs  process.rs  thread.rs
userspace/lib/lythos-libstd/src/io/: cursor.rs  error.rs  mod.rs
userspace/lib/lythos-libstd/src/os/: lythos.rs
userspace/lib/lythos-libstd/src/sync/: mod.rs  rwlock.rs
userspace/lib/lythos-libstd/src/sys/: mod.rs
userspace/lib/lythos-libstd/src/sys/lythos/: alloc.rs  io.rs  mod.rs  process.rs  thread.rs  time.rs
userspace/lysh/: Cargo.toml
userspace/rkilo/: Cargo.toml
userspace/rpkg/: Cargo.toml
userspace/rutils/: Cargo.toml
web/: index.html
webwm/: README.md
webwm/bridge/: Cargo.toml
webwm/cef/: CMakeLists.txt
webwm/cef/src/: input_fwd.c
webwm/frontend/: index.html  vite.config.js
(+87 files in other folders)
