[workspace]
members = [
    "abi/lythos-abi",
    "abi/lythos-syscall",
    "kernel",
    "userspace/lib/lythos-rt",
    "userspace/lib/lythos-libstd",
    "userspace/init/lythd",
    "userspace/daemons/lythdist",
    "userspace/daemons/lythmsg",
    "userspace/shell/lysh",
    "userspace/apps/rkilo",
    "userspace/apps/rutils",
    "pkg/rpkg",
    "tools/orox-pack",
    "tools/lythos-toolchain/lythos-libc",
    "tools/lythos-toolchain/lythos-unwind",
    "tools/lythos-toolchain/sysroot-builder",
]
exclude = [
    "tools/mkrfs",
    "userspace/webwm/bridge",
]
# default-members: host-compilable tools only.
# kernel/ needs --target x86_64-lythos.json; all userspace/ crates need --target x86_64-oros.json.
# lythos-libc and lythos-unwind need the lythos sysroot target.
# Use `cargo xtask build-kernel` / `cargo xtask build-userspace` (xtask TBD).
default-members = [
    "tools/orox-pack",
    "tools/lythos-toolchain/sysroot-builder",
]
resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
