[package]
name = "lythos"
version = "0.1.0"
edition = "2024"

[dependencies]
limine = "0.6.5"
rfs2 = { path = "../fs/rfs2" }
vfs-core = { path = "../fs/vfs-core" }

[features]
# Run the userspace-entry / ELF / integration / sweep boot test suite in
# kmain (costs seconds per boot). Enabled by `make kernel-tests`.
boot-tests = []
