[package]
name = "vfs-core"
version = "0.1.0"
edition = "2021"
description = "Host-testable VFS core: mount table (longest-prefix routing over an abstract FsBackend) + realize-guard (read-only-after-realize). Backend-agnostic; the kernel supplies an Rfs2-backed FsBackend and cap enforcement. See docs/plans/mount-syscall-shade-store.md."

[dependencies]
