[package]
name = "shade-cdf"
version = "0.1.0"
edition = "2024"
description = "Canonical Derivation Form: the one shared canonicalizer (docs/shade-pkg/02-store.md §3.2-3.3, docs/shade/08-interop.md §1)"

[dependencies]
blake3 = { version = "1", default-features = false }

# Bare-metal (the x86_64-oros userspace target has os = "none"): force blake3's
# pure-Rust implementation — its build.rs otherwise assembles x86_64 .S files
# with the host cc, which breaks cross builds and links unix-ABI objects.
[target.'cfg(target_os = "none")'.dependencies]
blake3 = { version = "1", default-features = false, features = ["pure"] }

[features]
default = []
