[package]
name = "shade-gen"
version = "0.1.0"
edition = "2024"
description = "shade generations, per-user profiles, and activation (docs/shade-pkg/02-store.md §5-6, 10-system-prism.md, docs/shade/generations-profiles.md). Generation lines under /shade/gen/, atomic symlink-flip switch + rollback, boot activation of a pre-built system generation. no_std+alloc over the StoreFs seam (features: std → HostFs + rebuild drivers, oros → OrosFs)."

[lib]
name = "shade_gen"
path = "src/lib.rs"

[dependencies]
shadec = { path = "../shadec", default-features = false }
shade-build = { path = "../shade-build", default-features = false }
shade-store = { path = "../shade-store", default-features = false }
shade-store-db = { path = "../shade-store-db", default-features = false }
# oros env (clock for the manifest created= stamp): raw syscall stubs +
# syscall numbers (x86_64 target only).
lythos-abi = { path = "../../abi/lythos-abi", optional = true }
lythos-syscall = { path = "../../abi/lythos-syscall", optional = true }

[features]
# Core (generation lines, pointer, boot activation) is no_std+alloc; all I/O
# goes through the injected StoreFs backend. `std` adds the HostFs-backed
# constructors, the prism rebuild drivers (the executor run loop is
# host-only), and the seed CLI; `oros` the on-target backend + env over the
# Lythos ABI.
default = ["std"]
std = ["shadec/std", "shade-build/std", "shade-store/std", "shade-store-db/std"]
oros = [
    "shade-store/oros",
    "shade-store-db/oros",
    "shade-build/oros",
    "dep:lythos-abi",
    "dep:lythos-syscall",
]

[[bin]]
# Host seed vehicle for `shade os rebuild` / `shade home rebuild` /
# `shade generations` / `shade rollback` (shade-pkg 09 §2), alongside the host
# `shade-build` and `shade-gc` binaries. The OROS `shade` binary stays a
# no_std stub until an OROS EvalIo + the symlink syscalls exist
# (pkg/shade/src/main.rs).
name = "shade-gen"
path = "src/bin/shade-gen.rs"
required-features = ["std"]
